--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint-config-next": "13.4.9",
     "fortawesome": "^0.0.1-security",
     "next": "13.4.9",
+    "next-pwa": "^5.6.0",
     "postcss": "8.4.25",
     "react": "18.2.0",
     "react-dom": "18.2.0",
